# MeoArc

./: .gitignore  README.md
docs/interface/: 00-OVERVIEW.md  02-API-CONTRACT.md  04-MCP-TOOLS.md
docs/management/: MeoArc_Project_Brief.md
src/backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/backend/app/: __init__.py
src/backend/app/agent/: state.py
src/backend/app/api/: __init__.py  app.py  auth.py
src/backend/app/core/: __init__.py  config.py  db.py  deps.py  llm.py  logging.py  security.py
src/backend/app/db/: db.py
src/backend/app/models/: __init__.py  session.py  user.py
src/backend/app/repo/: __init__.py  session_repo.py  user_repo.py
src/backend/app/schemas/: __init__.py  actions.py  agent.py  email.py  send.py  user.py
src/backend/app/services/: __init__.py  auth_service.py  email_service.py  gmail_actions.py  gmail_send.py  gmail_service.py  upload_store.py
src/backend/app/tools/: registry.py  schemas.py
src/frontend/: .env.example  .gitattributes  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
src/frontend/.claude/: settings.local.json
src/frontend/docs/: 00-OVERVIEW.md  01-DATA-MODEL.md  03-AGENT-SPEC.md  05-UC-TRACEABILITY.md
src/frontend/src/: App.tsx  index.css  vite-env.d.ts
src/frontend/src/auth/: auth-context.tsx
src/frontend/src/components/: ai-orb.tsx  logo.tsx  meo-mascot.tsx  theme-provider.tsx  theme-toggle.tsx
src/frontend/src/data/: categories.ts  emails.ts
src/frontend/src/lib/: agent.ts  api.ts  email-actions.ts  search.ts  utils.ts
src/frontend/src/pages/: login.tsx
(+20 files in other folders)
