[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
