# ╔══════════════════════════════════════════════════════════════════╗
# ║ pyproject.toml — "thẻ căn cước" của dự án Python                    ║
# ╠══════════════════════════════════════════════════════════════════╣
# ║ MỤC ĐÍCH: khai báo tên dự án, phiên bản Python tối thiểu, và        ║
# ║ DANH SÁCH THƯ VIỆN cần dùng. Công cụ `uv` đọc file này để tự tạo    ║
# ║ môi trường ảo + cài đúng thư viện. (Giống package.json bên FE.)     ║
# ╚══════════════════════════════════════════════════════════════════╝

[project]
name = "meoarc-backend-sandbox"
version = "0.1.0"
description = "Sandbox học backend MeoArc — FastAPI (đăng nhập + list email)"

# Yêu cầu Python 3.13 trở lên (đúng phiên bản nhóm chốt). uv sẽ tự lo nếu thiếu.
requires-python = ">=3.13"

# Các thư viện dự án phụ thuộc. Nấc 0 chỉ cần 2 cái:
dependencies = [
    "fastapi>=0.110",          # khung web: định nghĩa route, tự sinh trang /docs
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.29",  # "động cơ" chạy server (ASGI) — biến code thành web thật
]
